@@ -8,6 +8,13 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added new method C<use_category_templates()> to
+L<Krang::ElementClass::TopLevel>.  This boolean method defaults to
+true, and can be used to determine whether or not to wrap story output
+in category templates. [Peter]
+
+=item *
+
 Fixed a bug which caused scheduler problems in upgraded Krang
 installs.  Krang::Schedule::Daemon was missing code to reset
 REMOTE_USER for each instance.  [Sam]
